cluster/infrastructure/ingress/main-setup/basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: ingress
spec:
  basicAuth:
    secret: auth-secret
