cluster/infrastructure/ingress/main-setup/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy
  listeners:
    - name: web-forgejo-ssh-redirect
      port: 80
      protocol: HTTP
      hostname: "git.forgejo.maio-tech.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure-tld
      port: 443
      protocol: HTTPS
      hostname: "maio-tech.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: tld-cert
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure-sub
      port: 443
      protocol: HTTPS
      hostname: "*.maio-tech.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: sub-domain
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure-forgejo-ssh-redirect
      port: 443
      protocol: HTTPS
      hostname: "git.forgejo.maio-tech.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: forgejo-ssh-redirect-cert
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure-attic
      port: 443
      protocol: HTTPS
      hostname: "attic.maio-tech.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: attic-letsencrypt-cert
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure-svc
      port: 443
      protocol: HTTPS
      hostname: "*.svc.maio-tech.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: s3-letsencrypt-cert
      allowedRoutes:
        namespaces:
          from: All
